Update Actions job name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 jobs:
   grade:
     runs-on: ubuntu-latest
+    name: Grade
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
